Fix ie11 flex column collapse

--- a/source/assets/stylesheets/sections/_topper.scss
+++ b/source/assets/stylesheets/sections/_topper.scss
@@ -21,7 +21,10 @@
     @include section-spacing(padding-top);
     @include section-spacing(padding-bottom);
   }
+}
 
+.topper__content {
+  flex: 1 0 auto;
 }
 
 .topper__subhead {
@@ -69,7 +72,7 @@
 }
 
 .topper__featured-event {
-  flex: 1;
+  flex: 1 0 auto;
   width: 100%;
   max-width: $featured-event-content-width + $featured-event-figure-width;
 
